# test_collector

./: .gitignore  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
docker/collector/: Dockerfile
docker/postgres/: Dockerfile
statistics_collector/: dependencies.py  main.py  utils.py
statistics_collector/app/: parcer.py  tasks.py
statistics_collector/database/: models.py
statistics_collector/database/alembic/: env.py
statistics_collector/database/alembic/versions/: 000000000000_first_revision.py  119316391576_return_to_work_delete_id.py  25ec37511813_add_return_to_work_table.py
