[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "collector"
description = "Yandex Tracker statistics collector"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version", "dependencies"]

[tool.setuptools.packages.find]
include = ["statistics_collector"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }